fixed /mmocore admin level set